@@ -1,7 +1,13 @@
+2001-07-16  Scott S. Goodwin  <scott@scottg.net>
+
+	* tcl/http.tcl: you can now do ns_httpopen GET /index.html; the
+	script will automatically prepend http://hostname:port/ to the
+	url.
+
 2001-06-30  Dossy Shiobara  <scott@scottg.net>
 
 	* nsd/conn.c, tests/api/ns_conn.adp: fixed ns_conn outputheaders
-    as per bug #433676 submitted by Yon Derek (yond).
+	as per bug #433676 submitted by Yon Derek (yond).
 
 2001-05-22  Scott S. Goodwin  <scott@scottg.net>
 
